# chromatic-k-nearest-neighbours

./: .gitignore  CMakeLists.txt
data/: temperature-02-06-2024.points  temperature-03-06-2024.points  temperature-04-06-2024.points  temperature-06-06-2024.points  temperature-08-06-2024.points  temperature-09-06-2024.points  temperature-10-06-2024.points  temperature-11-06-2024.points
data/osm/: 1.points  2.points  bbg.points  bieleveld.points
data/temperature/: temperature-03-06-2024.points  temperature-05-06-2024.points  temperature-07-06-2024.points  temperature-08-06-2024.points  temperature-09-06-2024.points
figs/: fig1.eps  fig1.ipe  fig2.eps  fig2.ipe
figs/eps/: fig1.eps  fig2.eps
figs/ipe/: example1.ipe  example1.ipe.autosave.ipe  fig1.ipe  fig2.ipe  halfplane-query-dual.ipe  halfplane-query-dual.ipe.autosave.ipe  halfplane-query.ipe  rcutting-full.ipe  rcutting-right.ipe  rcutting-wrong.ipe  rcutting.ipe
results/: build.txt  fast-range.sty  fast_mode.txt  gen.txt  naive_mode.txt  naive_range.txt  table_extended.txt  table_generated.txt  table_reallife.txt  tree_range.txt
results/1d-generated/: fast_mode.txt  gen.txt  naive_mode.txt  tree_range.txt
results/2d generated/: all.sty  base.txt  mode fast.txt  mode naive.txt  mode pre n.clj  mode pre.txt  range fast.txt  range naive.txt  range pre n.clj  range pre.txt
scripts/: fetch_weather_stations.js  osm-to-points.js  package-lock.json  package.json  visualize-points.js  visualize.js
src/: main.cpp
src/1D/: mode_query.cpp  range_query.cpp
src/2D/: arrangement_cg.h  mode_query.cpp  range_query.cpp  rangetree.h
src/datastructures/: 1d_mode.cpp  generic.cpp  tree.cpp
src/tests/: 1d.cpp  1d_range_finding.cpp  2d.cpp  read_data.cpp
tex/: appendix-1d.blg  appendix-1d.fdb_latexmk  appendix-1d.fls  appendix-1d.run.xml  appendix-1d.tex  appendix-2d.aux  appendix-2d.blg  appendix-2d.fdb_latexmk  appendix-2d.fls  appendix-2d.tex  lib.bib  main.aux  main.bcf  main.dvi  main.fdb_latexmk  main.fls  main.run.xml  main.tex  package-lock.json  res  res copy
tex/figs/: fig1.eps  fig2.eps
tex/figs/tex/: 1dmode.tex  1drange.tex  2dmode.tex  2dpre.tex  2drange.tex  appendix-1d.tex  appendix-2d.tex
